Fix deployment dependencies

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,7 @@
 [build]
-command = "npm run build"
+command = "npm install && npm run build"
 upload_dir = ".next/static"
+node_compat = true  # Enable Node.js compatibility
 
 [[functions]]
-directory = "none" 
+directory = "none"
