--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "embla-carousel-react": "^8.3.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
+    "next": "^15.2.4",
     "next-themes": "^0.3.0",
     "puppeteer-core": "^24.4.0",
     "react": "^18.3.1",
